--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -67,7 +67,7 @@
                 android:id="@+id/tvGithub"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="GitHub Repository: https://github.com/masazrathrh/ElectraBill.git"
+                android:text="GitHub Repository: https://github.com/masazrathrh/ElectraBill"
                 android:textSize="15sp"
                 android:textColor="#1A73E8"
                 android:layout_marginBottom="20dp" />
